--- a/lesson_2/Linear_models.ipynb
+++ b/lesson_2/Linear_models.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Домашнее задание №2 - Линейные модели. Градиентный спуск"
+    "# Homework #2 - Linear Models. gradient descent"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "В этом домашнем задании мы с вами научимся обучать линейные модели регрессии и классификации при помощи очень мощного, но в то же время довольно понятного алгоритма, который называется **градиетный спуск**. Помимо линейных моделей он используется и для обучения самых сложных нейронных сетей! Также мы потренируемся применять готовые реализации линейных моделей для задач регрессии и бинарной классификации."
+    "In this homework assignment, you and I will learn how to train linear regression and classification models using a very powerful, but at the same time quite understandable algorithm called **gradient descent**. In addition to linear models, it is also used to train the most complex neural networks! We will also practice using ready-made implementations of linear models for regression and binary classification problems."
    ]
   },
   {
@@ -2413,29 +2413,6 @@
     "\n",
     "https://music.yandex.ru/album/8520539/track/57050851"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Therapy time\n",
-    "\n",
-    "Напишите здесь ваши впечатления о задании: было ли интересно, было ли слишком легко или наоборот сложно и тд. Также сюда можно написать свои идеи по улучшению заданий, а также предложить данные, на основе которых вы бы хотели построить следующие дз. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Ваши мысли:**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
