--- a/lesson_4/dt_lecture_practice.ipynb
+++ b/lesson_4/dt_lecture_practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b084d51a-694e-4cc8-99cb-f2e8cc62269d",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "1ab19c5c-4a2b-4388-8063-ec56e415408a",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,7 @@
        "4               4     10  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,11 +224,350 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "id": "6b030347-c1fb-4dd9-b8f8-5341044631d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(17996, 17)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "d19b38c0-2bbd-476d-8ec8-c244fb8b2a78",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 17996 entries, 0 to 17995\n",
+      "Data columns (total 17 columns):\n",
+      " #   Column              Non-Null Count  Dtype  \n",
+      "---  ------              --------------  -----  \n",
+      " 0   Artist Name         17996 non-null  object \n",
+      " 1   Track Name          17996 non-null  object \n",
+      " 2   Popularity          17568 non-null  float64\n",
+      " 3   danceability        17996 non-null  float64\n",
+      " 4   energy              17996 non-null  float64\n",
+      " 5   key                 15982 non-null  float64\n",
+      " 6   loudness            17996 non-null  float64\n",
+      " 7   mode                17996 non-null  int64  \n",
+      " 8   speechiness         17996 non-null  float64\n",
+      " 9   acousticness        17996 non-null  float64\n",
+      " 10  instrumentalness    13619 non-null  float64\n",
+      " 11  liveness            17996 non-null  float64\n",
+      " 12  valence             17996 non-null  float64\n",
+      " 13  tempo               17996 non-null  float64\n",
+      " 14  duration_in min/ms  17996 non-null  float64\n",
+      " 15  time_signature      17996 non-null  int64  \n",
+      " 16  Class               17996 non-null  int64  \n",
+      "dtypes: float64(12), int64(3), object(2)\n",
+      "memory usage: 2.3+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "0117df2b-73da-43e7-b367-cd6da72cb73a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Popularity</th>\n",
+       "      <th>danceability</th>\n",
+       "      <th>energy</th>\n",
+       "      <th>key</th>\n",
+       "      <th>loudness</th>\n",
+       "      <th>mode</th>\n",
+       "      <th>speechiness</th>\n",
+       "      <th>acousticness</th>\n",
+       "      <th>instrumentalness</th>\n",
+       "      <th>liveness</th>\n",
+       "      <th>valence</th>\n",
+       "      <th>tempo</th>\n",
+       "      <th>duration_in min/ms</th>\n",
+       "      <th>time_signature</th>\n",
+       "      <th>Class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>17568.000000</td>\n",
+       "      <td>17996.000000</td>\n",
+       "      <td>17996.000000</td>\n",
+       "      <td>15982.000000</td>\n",
+       "      <td>17996.000000</td>\n",
+       "      <td>17996.000000</td>\n",
+       "      <td>17996.000000</td>\n",
+       "      <td>17996.000000</td>\n",
+       "      <td>13619.000000</td>\n",
+       "      <td>17996.000000</td>\n",
+       "      <td>17996.000000</td>\n",
+       "      <td>17996.000000</td>\n",
+       "      <td>1.799600e+04</td>\n",
+       "      <td>17996.000000</td>\n",
+       "      <td>17996.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>44.512124</td>\n",
+       "      <td>0.543433</td>\n",
+       "      <td>0.662777</td>\n",
+       "      <td>5.952447</td>\n",
+       "      <td>-7.910660</td>\n",
+       "      <td>0.636753</td>\n",
+       "      <td>0.079707</td>\n",
+       "      <td>0.247082</td>\n",
+       "      <td>0.177562</td>\n",
+       "      <td>0.196170</td>\n",
+       "      <td>0.486208</td>\n",
+       "      <td>122.623294</td>\n",
+       "      <td>2.007445e+05</td>\n",
+       "      <td>3.924039</td>\n",
+       "      <td>6.695821</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>17.426928</td>\n",
+       "      <td>0.166268</td>\n",
+       "      <td>0.235373</td>\n",
+       "      <td>3.196854</td>\n",
+       "      <td>4.049151</td>\n",
+       "      <td>0.480949</td>\n",
+       "      <td>0.083576</td>\n",
+       "      <td>0.310632</td>\n",
+       "      <td>0.304048</td>\n",
+       "      <td>0.159212</td>\n",
+       "      <td>0.240195</td>\n",
+       "      <td>29.571527</td>\n",
+       "      <td>1.119891e+05</td>\n",
+       "      <td>0.361618</td>\n",
+       "      <td>3.206073</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.059600</td>\n",
+       "      <td>0.000020</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-39.952000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.022500</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.011900</td>\n",
+       "      <td>0.018300</td>\n",
+       "      <td>30.557000</td>\n",
+       "      <td>5.016500e-01</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>33.000000</td>\n",
+       "      <td>0.432000</td>\n",
+       "      <td>0.509000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>-9.538000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.034800</td>\n",
+       "      <td>0.004300</td>\n",
+       "      <td>0.000089</td>\n",
+       "      <td>0.097500</td>\n",
+       "      <td>0.297000</td>\n",
+       "      <td>99.620750</td>\n",
+       "      <td>1.663370e+05</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>44.000000</td>\n",
+       "      <td>0.545000</td>\n",
+       "      <td>0.700000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>-7.016000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.047400</td>\n",
+       "      <td>0.081400</td>\n",
+       "      <td>0.003910</td>\n",
+       "      <td>0.129000</td>\n",
+       "      <td>0.481000</td>\n",
+       "      <td>120.065500</td>\n",
+       "      <td>2.091600e+05</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>56.000000</td>\n",
+       "      <td>0.659000</td>\n",
+       "      <td>0.860000</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>-5.189000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.083000</td>\n",
+       "      <td>0.434000</td>\n",
+       "      <td>0.200000</td>\n",
+       "      <td>0.258000</td>\n",
+       "      <td>0.672000</td>\n",
+       "      <td>141.969250</td>\n",
+       "      <td>2.524900e+05</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>0.989000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>1.355000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.955000</td>\n",
+       "      <td>0.996000</td>\n",
+       "      <td>0.996000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.986000</td>\n",
+       "      <td>217.416000</td>\n",
+       "      <td>1.477187e+06</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Popularity  danceability        energy           key      loudness  \\\n",
+       "count  17568.000000  17996.000000  17996.000000  15982.000000  17996.000000   \n",
+       "mean      44.512124      0.543433      0.662777      5.952447     -7.910660   \n",
+       "std       17.426928      0.166268      0.235373      3.196854      4.049151   \n",
+       "min        1.000000      0.059600      0.000020      1.000000    -39.952000   \n",
+       "25%       33.000000      0.432000      0.509000      3.000000     -9.538000   \n",
+       "50%       44.000000      0.545000      0.700000      6.000000     -7.016000   \n",
+       "75%       56.000000      0.659000      0.860000      9.000000     -5.189000   \n",
+       "max      100.000000      0.989000      1.000000     11.000000      1.355000   \n",
+       "\n",
+       "               mode   speechiness  acousticness  instrumentalness  \\\n",
+       "count  17996.000000  17996.000000  17996.000000      13619.000000   \n",
+       "mean       0.636753      0.079707      0.247082          0.177562   \n",
+       "std        0.480949      0.083576      0.310632          0.304048   \n",
+       "min        0.000000      0.022500      0.000000          0.000001   \n",
+       "25%        0.000000      0.034800      0.004300          0.000089   \n",
+       "50%        1.000000      0.047400      0.081400          0.003910   \n",
+       "75%        1.000000      0.083000      0.434000          0.200000   \n",
+       "max        1.000000      0.955000      0.996000          0.996000   \n",
+       "\n",
+       "           liveness       valence         tempo  duration_in min/ms  \\\n",
+       "count  17996.000000  17996.000000  17996.000000        1.799600e+04   \n",
+       "mean       0.196170      0.486208    122.623294        2.007445e+05   \n",
+       "std        0.159212      0.240195     29.571527        1.119891e+05   \n",
+       "min        0.011900      0.018300     30.557000        5.016500e-01   \n",
+       "25%        0.097500      0.297000     99.620750        1.663370e+05   \n",
+       "50%        0.129000      0.481000    120.065500        2.091600e+05   \n",
+       "75%        0.258000      0.672000    141.969250        2.524900e+05   \n",
+       "max        1.000000      0.986000    217.416000        1.477187e+06   \n",
+       "\n",
+       "       time_signature         Class  \n",
+       "count    17996.000000  17996.000000  \n",
+       "mean         3.924039      6.695821  \n",
+       "std          0.361618      3.206073  \n",
+       "min          1.000000      0.000000  \n",
+       "25%          4.000000      5.000000  \n",
+       "50%          4.000000      8.000000  \n",
+       "75%          4.000000     10.000000  \n",
+       "max          5.000000     10.000000  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "2123e023-3db2-422a-ab0c-9dd3edd4e229",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Class\n",
+       "10       4949\n",
+       "6        2587\n",
+       "9        2524\n",
+       "8        1854\n",
+       "5        1447\n",
+       "1        1373\n",
+       "2        1272\n",
+       "0         625\n",
+       "7         576\n",
+       "3         402\n",
+       "4         387\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[['Class']].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a00e938-7ea5-4cca-a1be-0b6b268b983d",
+   "metadata": {},
+   "source": [
+    "Very unbalanced classes"
+   ]
   },
   {
    "cell_type": "markdown",
