Renaming, Fixing README

--- a/KNN/KNN.ipynb
+++ b/KNN/KNN.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "33d362fb",
    "metadata": {},
    "source": [
     "# Homework #1 - K-nearest neighbors method\n",
@@ -23,6 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "6c752f51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,6 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
+   "id": "3e22421b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,6 +64,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b4a93a8e",
    "metadata": {},
    "source": [
     "## Task 1. KNN on the Fashion-MNIST dataset"
@@ -68,6 +72,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "41f0371e",
    "metadata": {},
    "source": [
     "In this task you have to work with pictures of clothes, among which 10 classes can be distinguished. The data is already loaded for you: the X variable contains 70,000 28 x 28 pixel images flattened into a 784 (28 * 28) vector. Since there is quite a lot of data, and our KNN will be very slow, we will randomly take 1000 observations (in reality, depending on your implementation, you can take more, but if there is no RAM, then take less)."
@@ -76,6 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "c8c74510",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,6 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "53da9425",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,6 +103,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0337a2d8",
    "metadata": {},
    "source": [
     "Let's look at some image from our data:"
@@ -104,6 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "4cfdfd21",
    "metadata": {
     "scrolled": true
    },
@@ -131,6 +140,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e65540ec",
    "metadata": {},
    "source": [
     "### 1.1. Let's look at all classes"
@@ -138,6 +148,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "543949c6",
    "metadata": {},
    "source": [
     "Take one picture of each class and draw them (for example, make subplots 5 by 2)."
@@ -146,6 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "bd81f5db",
    "metadata": {},
    "outputs": [
     {
@@ -176,6 +188,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1c5c3e14",
    "metadata": {},
    "source": [
     "### 1.2. Make a small EDA"
@@ -183,6 +196,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bed9df50",
    "metadata": {},
    "source": [
     "Look at class balance. In the following homework, do EDA whenever you cinsider it needed But it is almost always needed :).Do EDA to learn something new about data!"
@@ -191,6 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "8641118a",
    "metadata": {},
    "outputs": [
     {
@@ -211,6 +226,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "77d9b8c7",
    "metadata": {},
    "source": [
     "For me it was\n",
@@ -229,6 +245,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "649541be",
    "metadata": {},
    "source": [
     "### 1.3. Divide the data into train and test"
@@ -236,6 +253,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "af164b9f",
    "metadata": {},
    "source": [
     "Divide the data into training and test sets, choose the size of the test set yourself. This is where the `train_test_split` function can help you."
@@ -244,6 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "09441811",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,6 +271,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b0e231ef",
    "metadata": {},
    "source": [
     "### 1.4. KNN for Binary Classification"
@@ -259,6 +279,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e9d70090",
    "metadata": {},
    "source": [
     "Let's take for the binary classification problem only objects with class labels 0 and 1."
@@ -267,6 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "5ed35241",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,6 +300,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "68382c23",
    "metadata": {},
    "source": [
     "And so we prepared the data, but we don’t have a model yet. In several lessons of our course, you will have to implement some machine learning algorithms yourself, and then compare them with ready-made library solutions. In the rest of the tasks, it will not be necessary to implement algorithms, but it can be useful, so often these will be tasks for additional points, but this is not the main thing, but understanding the operation of the algorithm after its implementation from scratch using simple numpy. Also, all this can then be arranged in the form of the `ml_from_scratch` repository and brag to your friends."
@@ -286,6 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "ffe1a00e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,6 +319,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bcf7f79d",
    "metadata": {},
    "source": [
     "### It's time to code!"
@@ -302,6 +327,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8e844fc0",
    "metadata": {},
    "source": [
     "In KNN, for each test case, we need to find the distances to all points of the training sample. Let's say we have 1000 examples in train and 100 in test, then in the end we would like to get a matrix of pairwise distances (for example, 100 by 1000). This can be done in several ways, and someone probably comes up with the idea of two nested loops (I hope not more :).But there are better ways. In general, the real KNN uses the [k-d-tree](https://en.wikipedia.org/wiki/K-d_tree) data structure, which allows you to search for log (N), and not for N, as we will do (in fact, this is an extension of binary search to a multidimensional space).\n",
@@ -318,6 +344,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e7b7e0c6",
    "metadata": {},
    "source": [
     "In the beginning, I will sometimes write different asserts so that you can check the correctness of the implementation, in the future you will need to write them yourself if you need to check the correctness of some calculations."
@@ -326,6 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "229cd71e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,6 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "9b0728e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,6 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "bbc377ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,6 +388,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a6da5186",
    "metadata": {},
    "source": [
     "Check the speed of the implemented methods"
@@ -366,6 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "3b1ce205",
    "metadata": {
     "tags": []
    },
@@ -389,6 +421,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "31f955a9",
    "metadata": {},
    "source": [
     "Implementing a Method to Predict Class Labels"
@@ -397,6 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "bf2f8346",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,6 +440,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7e25ede9",
    "metadata": {},
    "source": [
     "### Metrics"
@@ -413,6 +448,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "eae8c68b",
    "metadata": {},
    "source": [
     "Now we need to implement some metrics for binary classification. Don't forget to think about numerical instability (divide by 0)."
@@ -421,6 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "cd997a3b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,6 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "7abf2be7",
    "metadata": {},
    "outputs": [
     {
@@ -452,6 +490,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b02091d6",
    "metadata": {},
    "source": [
     "Is everything okay with the model? You can test your implementation with functions from the `sklearn` library:"
@@ -459,6 +498,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3554d889",
    "metadata": {},
    "source": [
     "<img src=\"https://i.imgflip.com/406fu9.jpg\" width=\"800\" height=\"400\">"
@@ -467,6 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "e994fc0c",
    "metadata": {},
    "outputs": [
     {
@@ -489,6 +530,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1f57f70f",
    "metadata": {},
    "source": [
     "### Selection of the optimal k"
@@ -496,6 +538,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b9d2f5ed",
    "metadata": {},
    "source": [
     "To select the optimal value of the parameter k, you can do the following: specify the range of acceptable values for k, for example, `[1, 3, 5, 10]`. Then, for each k, train the model on the training data, make predictions on the test data, and calculate some metric (choose the metric yourself based on the task, but try to justify the choice). At the end, you need to look at the dependence of the metric on train and test on k and choose the appropriate value.\n",
@@ -506,6 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
+   "id": "c7e92bea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,6 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
+   "id": "1eb8eca0",
    "metadata": {
     "tags": []
    },
@@ -550,6 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
+   "id": "cf6f70d4",
    "metadata": {},
    "outputs": [
     {
@@ -577,6 +623,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b9e68d24",
    "metadata": {},
    "source": [
     "<font color=\"#3059C1\">(2/6)</font>"
@@ -584,6 +631,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "40828655",
    "metadata": {},
    "source": [
     "**As long as it is a binary classification with balanced classes, we have decided to use accuracy score.**\n",
@@ -593,6 +641,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4c7d88ae",
    "metadata": {},
    "source": [
     "Actually, this is not the best way to fit hyperparameters, but we will look at better ways next time, but for now, choose the optimal value of k, make predictions and see how well your model predicts each of the classes."
@@ -600,6 +649,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "447c92ba",
    "metadata": {},
    "source": [
     "### 1.5. Multiclass classification "
@@ -607,6 +657,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "79c9d462",
    "metadata": {},
    "source": [
     "Now you need to learn how to predict all 10 classes. To do this, at the beginning we will write the corresponding method for our classifier."
@@ -615,6 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
+   "id": "ba6f77a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,6 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
+   "id": "f6386488",
    "metadata": {},
    "outputs": [
     {
@@ -668,6 +721,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e3845d3f",
    "metadata": {},
    "source": [
     "It remains to implement the quality metric for multiclass classification, for this, implement the `multiclass_accuracy` function in `metrics.py`."
@@ -676,6 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
+   "id": "e00d8f15",
    "metadata": {},
    "outputs": [
     {
@@ -697,6 +752,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
+   "id": "76f0119a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,6 +763,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
+   "id": "6388c9af",
    "metadata": {},
    "outputs": [
     {
@@ -734,6 +791,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "85aba52d",
    "metadata": {},
    "source": [
     "Again choose the optimal value of K as we did for binary classification."
@@ -741,6 +799,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6aaa431b",
    "metadata": {},
    "source": [
     "**Well, it's hard to pint out the best one, so I will go with k=3? at wich accuracy is still over 0.7*"
@@ -748,6 +807,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "30b1a2f8",
    "metadata": {},
    "source": [
     "## Task 2.KNN on diabetes dataset"
@@ -755,6 +815,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "05dddf37",
    "metadata": {},
    "source": [
     "Now let's try to apply KNN to the regression problem. We will work with diabetes [data](https://scikit-learn.org/stable/datasets/toy_dataset.html#diabetes-dataset). In this task, we will use the `KNeighborsRegressor` class from the `sklearn` library. Download the required libraries:"
@@ -763,6 +824,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
+   "id": "62f0a39a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -778,6 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
+   "id": "1120dafd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,6 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
+   "id": "61a04cc6",
    "metadata": {},
    "outputs": [
     {
@@ -919,6 +983,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "27efdc4c",
    "metadata": {},
    "source": [
     "* age age in years\n",
@@ -935,6 +1000,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ff4932ad",
    "metadata": {},
    "source": [
     "### 2.1. EDA "
@@ -942,6 +1008,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a72859e3",
    "metadata": {},
    "source": [
     "Make an EDA, preprocess the data as you see fit, is standardization needed in this case and why? Do not forget that if you are standardizing the data, then you need to calculate the mean and standard deviation on the training part and use them to transform both train and test (**if you don’t understand this sentence, then be sure to figure it out**).\n",
@@ -953,6 +1020,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
+   "id": "b1185f2e",
    "metadata": {},
    "outputs": [
     {
@@ -1005,6 +1073,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
+   "id": "8b37556e",
    "metadata": {},
    "outputs": [
     {
@@ -1183,6 +1252,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
+   "id": "e83788a5",
    "metadata": {},
    "outputs": [
     {
@@ -1211,6 +1281,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
+   "id": "67641dfb",
    "metadata": {},
    "outputs": [
     {
@@ -1237,6 +1308,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a6de2d0e",
    "metadata": {},
    "source": [
     "**Source of dataset says data is standardized. And it really looks like it. Yet, after train/test split I'll perfrom aonther standartization and will apply OHE to sex column**"
@@ -1245,6 +1317,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
+   "id": "ff65c0a6",
    "metadata": {},
    "outputs": [
     {
@@ -1278,6 +1351,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0a7ee43e",
    "metadata": {},
    "source": [
     "**Don't know how important this is for regression, the target variable is unevenly distributed.**"
@@ -1285,6 +1359,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cfd331a4",
    "metadata": {},
    "source": [
     "### 2.2.Regression model + Pipeline(optional)"
@@ -1292,6 +1367,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7c7cf15e",
    "metadata": {},
    "source": [
     "Create a `KNeighborsRegressor` model, train it on the training data and make predictions."
@@ -1300,6 +1376,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
+   "id": "99fe2dbb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1309,6 +1386,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
+   "id": "ad07cbbb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1319,6 +1397,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
+   "id": "f2ee44be",
    "metadata": {},
    "outputs": [
     {
@@ -1347,6 +1426,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
+   "id": "f7e57642",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1359,6 +1439,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
+   "id": "c4b25a2b",
    "metadata": {},
    "outputs": [
     {
@@ -1390,6 +1471,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
+   "id": "f2c9b83b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1398,6 +1480,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0d233031",
    "metadata": {},
    "source": [
     "### 2.3. Regression Metrics"
@@ -1405,6 +1488,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7202cc07",
    "metadata": {},
    "source": [
     "Implement $R^2$, MSE and MAE metrics in `metrics.py`. Apply them to evaluate the quality of the resulting model. Is everything alright?\n",
@@ -1421,6 +1505,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
+   "id": "927e6c29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1430,6 +1515,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
+   "id": "c5d2e8e5",
    "metadata": {},
    "outputs": [
     {
@@ -1450,6 +1536,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "17bbbac7",
    "metadata": {},
    "source": [
     "### 2.4. Selection of the optimal number of neighbors"
@@ -1457,6 +1544,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9e90946f",
    "metadata": {},
    "source": [
     "We've almost reached the end. Now it remains to choose the best number of neighbors for our model using the metrics we implemented.\n",
@@ -1467,6 +1555,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
+   "id": "d56d7d58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1476,6 +1565,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
+   "id": "7e63b76d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1507,6 +1597,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
+   "id": "b001004a",
    "metadata": {},
    "outputs": [
     {
@@ -1561,6 +1652,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "79324b4b",
    "metadata": {},
    "source": [
     "**Good values for k are between 5 and 10/ At 10 all of metrics reach some kind of plateau. Yet MSE and MAE ar slightly incresing at value above 10**"
@@ -1569,7 +1661,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1583,7 +1675,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
